# Tucil1_13524053

./: .gitignore  CMakeLists.txt  README.md
doc/: Laporan_Tucil_1_Stima.tex
src/: main.cpp
src/GUI/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: Board.cpp  Board.h  Solver.cpp  Solver.h  algorithm.cpp
src/helper/: FileManager.cpp  FileManager.h  FileParser.cpp  FileParser.h  ImageWidget.cpp  ImageWidget.h
test/: a.txt  invalid_char.txt  no_solution.txt  saver_txt_ada_o.txt  saver_txt_no_o.txt  tc-00.txt  tc-lucak.txt
